# presurge-daily-picker

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  daily_pick.yml  intraday_monitor.yml  intraday_signal_report.yml  options_weekly.yml  universe_refresh.yml
docs/: DEVELOPMENT_STRATEGY.md  INTRADAY_MONITORING_MVP.md  PATTERNS.md  RUNBOOK.md
scripts/: analyze_surge_recall.py  backfill_bars.py  backfill_filings.py  backfill_historical_max_mcap.py  backfill_surges.py  bootstrap_live_cron.sh  bootstrap_universe.py  classify_filings.py  com.presurge.daily.plist  com.presurge.intraday.plist  com.presurge.options_weekly.plist  evaluate_intraday_signals.py  ingest_options_snapshot.py  migrate_sqlite_to_supabase.py  report_intraday_signals.py  run_backtest.py  run_intraday_monitor.py  seed_known_cases.py  seed_russell_events.py  snapshot_short_interest.py  tune_weights.py  update_trade_log.py
src/: __init__.py  config.py  runner.py
src/backtest/: __init__.py  hypotheses.py  runner.py
src/ingest/: __init__.py  _http.py  edgar_8k.py  finnhub.py  polygon_bars.py  reddit_ape.py  sec_body.py  stocktwits.py  telegram_inbound.py  toss_volume.py  yahoo_si.py  yahoo_trending.py  yfinance_options.py
src/intraday/: __init__.py  calendar.py  indicators.py  market_data.py  monitor.py  outcomes.py  signals.py  watchlist.py
src/report/: __init__.py  claude_summarizer.py  telegram_pusher.py
src/score/: __init__.py  base.py  pattern_a_dilution.py  pattern_b_index.py  pattern_c_contract.py  pattern_g_volume.py  (+4 more)
tests/: conftest.py
(+21 files in other folders)
