[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "presurge-daily-picker"
version = "0.2.0"
description = "Pre-Surge Daily Picker for US small-cap stocks (Toss app)"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "pydantic>=2.6.0",
    "python-dateutil>=2.9.0",
    "jinja2>=3.1.4",
    "python-dotenv>=1.0.1",
    "pandas>=2.2.0",
    "scipy>=1.13.0",
]

[project.optional-dependencies]
edgar = [
    "feedparser>=6.0.11",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "freezegun>=1.4.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "responses>=0.25.0",
]
backtest = [
    "optuna>=3.6.0",
    "matplotlib>=3.8.0",
    "jupyter>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "integration: integration tests touching external APIs",
    "slow: tests that take several seconds",
]
